# testcontainers-bazel-demo

./: MODULE.bazel
products/: BUILD.bazel  go.mod  go.sum  repo_test.go  trino.go
